--- a/templates/interstitial.html
+++ b/templates/interstitial.html
@@ -17,21 +17,16 @@
     <div>
       <h2>Sponsored Ad</h2>
       <!-- AdSense code (replace the client value with yours) -->
-      <script
-        async
-        src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5003831996766132"
-        crossorigin="anonymous"
-      ></script>
-      <ins
-        class="adsbygoogle"
-        style="display: block; text-align: center"
-        data-ad-format="autorelaxed"
-        data-ad-client="ca-pub-5003831996766132"
-        data-ad-slot="1277945077"
-      ></ins>
-      <script>
-        (adsbygoogle = window.adsbygoogle || []).push({});
-      </script>
+      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5003831996766132"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="autorelaxed"
+     data-ad-client="ca-pub-5003831996766132"
+     data-ad-slot="1277945077"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
     </div>
 
     <p>
